Adding secret to encrypt(temp)